# app/api/docs/space/space.swagger.yaml
@@ -81,7 +81,11 @@ paths:
         post:
             tags:
                 - 页面
-            summary: 删除页面
+            summary: 真删除页面
+            description: |4-
+                 删除后，所有该页面数据都会消失，所有人都无法打开该页面
+                 页面创建者可以删除该页面
+                 admin和管理员暂时不支持删除该页面
             operationId: SpaceService_DeletePage
             requestBody:
                 content:
@@ -252,6 +256,9 @@ components:
                     items:
                         $ref: '#/components/schemas/.Link'
                     description: 每个文件夹里，有多个链接
+                title:
+                    type: string
+                    description: 文件夹标题
         .CreatePageReq:
             required:
                 - title
